--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simplerxing's blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "author": "simplerxing",
   "license": "ISC"
