--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "cobish.github.io",
-  "version": "3.4.0",
-  "description": "cobish's blog",
+  "name": "simplerxing.github.io",
+  "version": "1.0.0",
+  "description": "simplerxing's blog",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "es6-promise": "^3.3.1",
     "highlight.js": "^9.6.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^1.11.1",
+    "jquery": "^1.12.4",
     "marked": "^0.3.6",
     "nprogress": "^0.2.0",
     "object-assign": "^4.1.0",
@@ -19,7 +20,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
