--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "es6-promise": "^3.3.1",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^9.6.0",
+    "import-loader": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.12.4",
     "marked": "^0.3.6",
